layouts/DefaultLayout.module.scss
@use '@/styles/jhm' as  *;

.defaultLayout {
  max-width: 1150px;
  margin: auto;
  min-height: 100vh;
  transition: background-color $theme-change-duration ease;
  padding-top: 50px;
}

.defaultLayoutContent {
  margin: auto;
  background-color: var(--jhm-primary-background-color);
  padding: 50px 25px;
  border-radius: $border-radius;

  @include larger-than(1000px) {
    padding: 100px;
  }
}

.firstRow {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  & + * {
    margin-top: 50px;
  }
}

.socialLinks {
  display: grid;
  font-size: 27px;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  margin-bottom: 100px;
}

.logoLink {
  display: flex;
}

.logo {
  height: 20px;
  width: auto;
}

.sectionsContainer {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.section {
  font-size: 30px;
  line-height: 1;
  font-weight: 800;
  display: inline-block;
  transition: filter $theme-change-duration ease,
    opacity $theme-change-duration ease, color $theme-change-duration ease;

  & + & {
    margin-top: 8px;
  }

  &.defocus {
    filter: blur(1.2px);
    opacity: 0.4;
  }

  &.active {
    color: var(--jhm-point-text-color);
  }

  &:hover {
    filter: blur(0px);
    opacity: 1;
  }
}

.sectionContent {
}

.footer {
  padding: 50px 0;
  display: grid;
  grid-auto-rows: min-content;
  justify-content: center;
  gap: 10px;
  font-size: 14px;
  color: var(--jhm-secondary-text-color);

  a {
    text-decoration: underline;
    color: var(--jhm-primary-text-color);
  }
}

